<resources>
    <string name="app_name" translatable="false">ReciclerViewTeste</string>
    <string name="open_web_browser">open web browser</string>
    <string name="open_new_intent">open new intent</string>
    <string name="share_it">Share it</string>
    <string name="counter">Counter</string>
    <string name="settings">Settings</string>
    <string name="settings_activity_name">Settings</string>

    // Preferences / Settings --------------------
    <string name="feedback_key" translatable="false">feedback</string>
    <string name="feedback_title">Send feedback</string>
    <string name="feedback_summary">Report technical issues or suggest new features</string>
    
    <string name="notifications_key" translatable="false">notifications</string>
    <string name="notifications_title">Enable notifications</string>
    
    <string name="sendmail_key" translatable="false">check_box_allow_email</string>
    <string name="sendmail_title">Send emails</string>

    <string name="color_key" translatable="false">color</string>
    <string name="color_label">Choose a color</string>
    
    <string name="color_blue_label">Blue</string>
    <string name="color_blue_value" translatable="false">blue</string>

    <string name="color_pink_label">Pink</string>
    <string name="color_pink_value" translatable="false">pink</string>

    <string name="set_color">Set color:</string>

    <string name="size_title">Multiplier</string>
    <string name="size_key">size</string>
    <string name="size_default">1</string>
    <string name="val_12345">00000012345</string>
    <string name="size_summary">Range 0.0 - 3.0</string>
</resources>
